@@ -10,8 +10,6 @@ android {
 
     defaultConfig {
         minSdk = 24
-
-        testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles("consumer-rules.pro")
     }
 
@@ -37,7 +35,7 @@ android {
 }
 
 dependencies {
-
+    // Implementation dependencies
     implementation(libs.androidx.core.ktx)
     implementation(libs.androidx.appcompat)
     implementation(libs.androidx.constraintlayout)
@@ -45,32 +43,56 @@ dependencies {
     implementation(libs.androidx.lifecycle.viewmodel.ktx)
     implementation(libs.androidx.activity)
     implementation(libs.material)
-    testImplementation(libs.junit)
-    androidTestImplementation(libs.androidx.junit)
-    androidTestImplementation(libs.androidx.espresso.core)
 
     // Global dependencies
     api(libs.recyclerview)
     api(libs.glide)
     api(libs.material)
 
-    // Room
+    // Room dependencies
     implementation(libs.room.runtime)
+    testImplementation(libs.room.testing)
     ksp(libs.room.compiler)
-    androidTestImplementation(libs.room.testing)
 
-    //Coroutines
+    // Coroutines
     implementation(libs.kotlinx.coroutines.core)
     implementation(libs.kotlinx.coroutines.android)
     implementation(libs.androidx.room.ktx)
     implementation(libs.androidx.lifecycle.livedata.ktx)
 
-    //Network
+    // Network dependencies
     implementation(libs.retrofit)
     implementation(libs.converter.gson)
     implementation(libs.logging.interceptor)
 
-    //Koin
+    // Koin for Dependency Injection
     api(libs.koin.android)
 
+    // SQLCipher for encrypted database
+    implementation(libs.android.database.sqlcipher)
+    implementation(libs.androidx.sqlite.ktx)
+
+    testImplementation(libs.androidx.core.testing)
+
+    // JUnit 5
+    testImplementation(libs.junit.jupiter)
+    testImplementation(libs.junit.jupiter.engine)
+
+    // Mockk for mocking
+    testImplementation(libs.mockk)
+
+    // Kotest Framework
+    testImplementation(libs.kotest.runner.junit5)
+    testImplementation(libs.kotest.assertions.core)
+    testImplementation(libs.kotest.property)
+
+    // Kotlin Coroutines Test (if using coroutines)
+    testImplementation(libs.kotlinx.coroutines.test)
+
+    testImplementation(kotlin("test"))
+}
+
+tasks.withType<Test> {
+    useJUnitPlatform()
+    jvmArgs = listOf("-XX:+EnableDynamicAgentLoading")
 }
